@@ -6,6 +6,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import ru.practicum.shareit.booking.Booking;
 import ru.practicum.shareit.booking.BookingMapper;
 import ru.practicum.shareit.booking.BookingRepository;
@@ -23,25 +25,24 @@ import ru.practicum.shareit.user.UserRepository;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class BookingServiceTest {
 
     @Mock
     private BookingRepository bookingRepository;
-
     @Mock
     private UserRepository userRepository;
-
     @Mock
     private ItemRepository itemRepository;
-
     @Mock
     private BookingMapper bookingMapper;
 
@@ -50,6 +51,7 @@ class BookingServiceTest {
 
     private User owner;
     private User booker;
+    private User otherUser;
     private Item item;
     private Booking booking;
     private BookingRequestDto requestDto;
@@ -60,14 +62,22 @@ class BookingServiceTest {
         owner = new User();
         owner.setId(1L);
         owner.setName("Owner");
+        owner.setEmail("owner@test.com");
 
         booker = new User();
         booker.setId(2L);
         booker.setName("Booker");
+        booker.setEmail("booker@test.com");
+
+        otherUser = new User();
+        otherUser.setId(3L);
+        otherUser.setName("Other");
+        otherUser.setEmail("other@test.com");
 
         item = new Item();
         item.setId(1L);
         item.setName("Test Item");
+        item.setDescription("Test Description");
         item.setAvailable(true);
         item.setOwner(1L);
 
@@ -86,20 +96,65 @@ class BookingServiceTest {
 
         bookingDto = new BookingDto();
         bookingDto.setId(1L);
-        bookingDto.setStatus(BookingStatus.WAITING);
     }
 
     @Test
-    void createBooking_ShouldSucceed() {
+    void createBooking_WhenStartAfterEnd_ShouldThrowException() {
+        requestDto.setStart(LocalDateTime.now().plusDays(2));
+        requestDto.setEnd(LocalDateTime.now().plusDays(1));
+
+        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
+                .isInstanceOf(BadRequestException.class)
+                .hasMessageContaining("должна быть позже");
+    }
+
+    @Test
+    void createBooking_WhenStartEqualsEnd_ShouldThrowException() {
+        requestDto.setStart(LocalDateTime.now().plusDays(1));
+        requestDto.setEnd(LocalDateTime.now().plusDays(1));
+
+        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
+                .isInstanceOf(BadRequestException.class)
+                .hasMessageContaining("должна быть позже");
+    }
+
+    @Test
+    void createBooking_WhenStartInPast_ShouldThrowException() {
+        requestDto.setStart(LocalDateTime.now().minusDays(1));
+        requestDto.setEnd(LocalDateTime.now().plusDays(2));
+
+        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
+                .isInstanceOf(BadRequestException.class)
+                .hasMessageContaining("не может быть в прошлом");
+    }
+
+    @Test
+    void createBooking_WhenUserNotFound_ShouldThrowException() {
+        when(userRepository.findById(2L)).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("Пользователь");
+    }
+
+    @Test
+    void createBooking_WhenItemNotFound_ShouldThrowException() {
         when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
+        when(itemRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("Вещь");
+    }
+
+    @Test
+    void createBooking_WhenOwnerBookOwnItem_ShouldThrowException() {
+        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
         when(itemRepository.findById(1L)).thenReturn(Optional.of(item));
-        when(bookingRepository.save(any(Booking.class))).thenReturn(booking);
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
 
-        BookingDto result = bookingService.createBooking(2L, requestDto);
-
-        assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo(1L);
+        assertThatThrownBy(() -> bookingService.createBooking(1L, requestDto))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("Владелец");
     }
 
     @Test
@@ -114,49 +169,51 @@ class BookingServiceTest {
     }
 
     @Test
-    void createBooking_WhenOwnerBooksOwnItem_ShouldThrowException() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
+    void createBooking_ShouldReturnBookingDto() {
+        when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
         when(itemRepository.findById(1L)).thenReturn(Optional.of(item));
+        when(bookingRepository.save(any(Booking.class))).thenReturn(booking);
+        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
 
-        assertThatThrownBy(() -> bookingService.createBooking(1L, requestDto))
+        BookingDto result = bookingService.createBooking(2L, requestDto);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo(1L);
+    }
+
+    @Test
+    void approveBooking_WhenBookingNotFound_ShouldThrowException() {
+        when(bookingRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> bookingService.approveBooking(1L, 1L, true))
                 .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("не может бронировать");
+                .hasMessageContaining("Бронирование");
     }
 
     @Test
-    void createBooking_WhenStartEqualsEnd_ShouldThrowException() {
-        requestDto.setStart(LocalDateTime.now().plusDays(1));
-        requestDto.setEnd(LocalDateTime.now().plusDays(1));
+    void approveBooking_WhenAlreadyApproved_ShouldThrowException() {
+        booking.setStatus(BookingStatus.APPROVED);
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
+        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
 
-        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
+        assertThatThrownBy(() -> bookingService.approveBooking(1L, 1L, true))
                 .isInstanceOf(BadRequestException.class)
-                .hasMessageContaining("должна быть позже");
+                .hasMessageContaining("статус");
     }
 
     @Test
-    void createBooking_WhenStartAfterEnd_ShouldThrowException() {
-        requestDto.setStart(LocalDateTime.now().plusDays(2));
-        requestDto.setEnd(LocalDateTime.now().plusDays(1));
+    void approveBooking_WhenAlreadyRejected_ShouldThrowException() {
+        booking.setStatus(BookingStatus.REJECTED);
+        when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
+        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
 
-        // Удалите стейблинги userRepository и itemRepository
-        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
+        assertThatThrownBy(() -> bookingService.approveBooking(1L, 1L, true))
                 .isInstanceOf(BadRequestException.class)
-                .hasMessageContaining("должна быть позже");
+                .hasMessageContaining("статус");
     }
 
     @Test
-    void createBooking_WhenStartInPast_ShouldThrowException() {
-        requestDto.setStart(LocalDateTime.now().minusDays(1));
-        requestDto.setEnd(LocalDateTime.now().plusDays(2));
-
-        // Удалите стейблинги userRepository и itemRepository
-        assertThatThrownBy(() -> bookingService.createBooking(2L, requestDto))
-                .isInstanceOf(BadRequestException.class)
-                .hasMessageContaining("не может быть в прошлом");
-    }
-
-    @Test
-    void approveBooking_ShouldApprove() {
+    void approveBooking_WhenApprove_ShouldSetApprovedStatus() {
         when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
         when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
         when(bookingRepository.save(any(Booking.class))).thenReturn(booking);
@@ -169,7 +226,7 @@ class BookingServiceTest {
     }
 
     @Test
-    void approveBooking_ShouldReject() {
+    void approveBooking_WhenReject_ShouldSetRejectedStatus() {
         when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
         when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
         when(bookingRepository.save(any(Booking.class))).thenReturn(booking);
@@ -182,201 +239,86 @@ class BookingServiceTest {
     }
 
     @Test
-    void approveBooking_WhenAlreadyApproved_ShouldThrowException() {
-        booking.setStatus(BookingStatus.APPROVED);
+    void getBookingById_WhenUserNotFound_ShouldThrowException() {
         when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
+        when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> bookingService.approveBooking(1L, 1L, true))
-                .isInstanceOf(BadRequestException.class)
-                .hasMessageContaining("уже имеет статус");
+        assertThatThrownBy(() -> bookingService.getBookingById(1L, 1L))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("Пользователь");
     }
 
     @Test
-    void getBookingById_AsBooker_ShouldReturnBooking() {
-        when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
+    void getBookingById_WhenUserIsOwner_ShouldReturnBookingDto() {
         when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
-
-        BookingDto result = bookingService.getBookingById(2L, 1L);
-
-        assertThat(result).isNotNull();
-    }
-
-    @Test
-    void getBookingById_AsOwner_ShouldReturnBooking() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
-        when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
         when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
 
         BookingDto result = bookingService.getBookingById(1L, 1L);
 
         assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo(1L);
     }
 
     @Test
-    void getBookingById_AsUnauthorized_ShouldThrowException() {
-        when(userRepository.findById(3L)).thenReturn(Optional.of(new User()));
-        when(bookingRepository.findById(1L)).thenReturn(Optional.of(booking));
+    void getBookingsByBooker_WhenUserNotFound_ShouldThrowException() {
+        when(userRepository.findById(2L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> bookingService.getBookingById(3L, 1L))
+        assertThatThrownBy(() -> bookingService.getBookingsByBooker(2L, BookingState.ALL))
                 .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("нет прав");
+                .hasMessageContaining("Пользователь");
     }
 
     @Test
-    void getBookingsByBooker_WithAllState_ShouldReturnAll() {
+    void getBookingsByBooker_WithStateAll_ShouldReturnBookings() {
         when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
-        when(bookingRepository.findByBookerId(2L)).thenReturn(Collections.singletonList(booking));
+        when(bookingRepository.findByBookerId(2L)).thenReturn(List.of(booking));
         when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
 
         var result = bookingService.getBookingsByBooker(2L, BookingState.ALL);
 
-        assertThat(result).hasSize(1);
+        assertThat(result).isNotEmpty();
+        assertThat(result.size()).isEqualTo(1);
     }
 
     @Test
-    void getBookingsByBooker_WithCurrentState_ShouldReturnCurrent() {
+    void getBookingsByBooker_WithEmptyList_ShouldReturnEmpty() {
         when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
-        when(bookingRepository.findByBookerIdAndStartBeforeAndEndAfter(any(), any(), any()))
-                .thenReturn(Collections.singletonList(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
+        when(bookingRepository.findByBookerId(2L)).thenReturn(Collections.emptyList());
 
-        var result = bookingService.getBookingsByBooker(2L, BookingState.CURRENT);
-
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void getBookingsByBooker_WithPastState_ShouldReturnPast() {
-        when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
-        when(bookingRepository.findByBookerIdAndEndBefore(any(), any()))
-                .thenReturn(Collections.singletonList(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
-
-        var result = bookingService.getBookingsByBooker(2L, BookingState.PAST);
-
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void getBookingsByBooker_WithFutureState_ShouldReturnFuture() {
-        when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
-        when(bookingRepository.findByBookerIdAndStartAfter(any(), any()))
-                .thenReturn(Collections.singletonList(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
-
-        var result = bookingService.getBookingsByBooker(2L, BookingState.FUTURE);
-
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void getBookingsByBooker_WithWaitingState_ShouldReturnWaiting() {
-        when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
-        when(bookingRepository.findByBookerIdAndStatus(2L, BookingStatus.WAITING))
-                .thenReturn(Collections.singletonList(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
-
-        var result = bookingService.getBookingsByBooker(2L, BookingState.WAITING);
-
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void getBookingsByBooker_WithRejectedState_ShouldReturnRejected() {
-        when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
-        when(bookingRepository.findByBookerIdAndStatus(2L, BookingStatus.REJECTED))
-                .thenReturn(Collections.emptyList());
-
-        var result = bookingService.getBookingsByBooker(2L, BookingState.REJECTED);
+        var result = bookingService.getBookingsByBooker(2L, BookingState.ALL);
 
         assertThat(result).isEmpty();
     }
 
     @Test
-    void getBookingsByBooker_WithInvalidState_ShouldThrowException() {
-        when(userRepository.findById(2L)).thenReturn(Optional.of(booker));
+    void getBookingsByOwner_WhenUserNotFound_ShouldThrowException() {
+        when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> bookingService.getBookingsByBooker(2L, null))
-                .isInstanceOf(NullPointerException.class); // Изменено с IllegalArgumentException
+        assertThatThrownBy(() -> bookingService.getBookingsByOwner(1L, BookingState.ALL))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("Пользователь");
     }
 
     @Test
-    void getBookingsByOwner_WithAllState_ShouldReturnAll() {
+    void getBookingsByOwner_WithStateAll_ShouldReturnBookings() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
-        when(bookingRepository.findAllByOwnerId(1L)).thenReturn(Collections.singletonList(booking));
+        when(bookingRepository.findAllByOwnerId(1L)).thenReturn(List.of(booking));
         when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
 
         var result = bookingService.getBookingsByOwner(1L, BookingState.ALL);
 
-        assertThat(result).hasSize(1);
+        assertThat(result).isNotEmpty();
+        assertThat(result.size()).isEqualTo(1);
     }
 
     @Test
-    void getBookingsByOwner_WithCurrentState_ShouldReturnCurrent() {
+    void getBookingsByOwner_WithEmptyList_ShouldReturnEmpty() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
-        // Исправлено: используем any() вместо точного LocalDateTime.now()
-        when(bookingRepository.findCurrentByOwnerId(eq(1L), any(LocalDateTime.class)))
-                .thenReturn(Collections.singletonList(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
+        when(bookingRepository.findAllByOwnerId(1L)).thenReturn(Collections.emptyList());
 
-        var result = bookingService.getBookingsByOwner(1L, BookingState.CURRENT);
+        var result = bookingService.getBookingsByOwner(1L, BookingState.ALL);
 
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void getBookingsByOwner_WithPastState_ShouldReturnPast() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
-        // Исправлено: используем any() вместо точного LocalDateTime.now()
-        when(bookingRepository.findPastByOwnerId(eq(1L), any(LocalDateTime.class)))
-                .thenReturn(Collections.singletonList(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
-
-        var result = bookingService.getBookingsByOwner(1L, BookingState.PAST);
-
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void getBookingsByOwner_WithFutureState_ShouldReturnFuture() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
-        // Исправлено: используем any() вместо точного LocalDateTime.now()
-        when(bookingRepository.findFutureByOwnerId(eq(1L), any(LocalDateTime.class)))
-                .thenReturn(Collections.singletonList(booking));
-        when(bookingMapper.toBookingDto(booking)).thenReturn(bookingDto);
-
-        var result = bookingService.getBookingsByOwner(1L, BookingState.FUTURE);
-
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void getBookingsByBooker_WhenUserNotFound_ShouldThrowException() {
-        when(userRepository.findById(99L)).thenReturn(Optional.empty());
-
-        assertThatThrownBy(() -> bookingService.getBookingsByBooker(99L, BookingState.ALL))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("не найден");
-    }
-
-    @Test
-    void getBookingsByOwner_WhenUserNotFound_ShouldThrowException() {
-        when(userRepository.findById(99L)).thenReturn(Optional.empty());
-
-        assertThatThrownBy(() -> bookingService.getBookingsByOwner(99L, BookingState.ALL))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("не найден");
-    }
-
-    @Test
-    void getBookingById_WhenBookingNotFound_ShouldThrowException() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(owner));
-        when(bookingRepository.findById(99L)).thenReturn(Optional.empty());
-
-        assertThatThrownBy(() -> bookingService.getBookingById(1L, 99L))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("не найдено");
+        assertThat(result).isEmpty();
     }
 }
